--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.10.4
+bidict==0.22.1
 blinker==1.6.2
 click==8.1.3
 dnspython==2.3.0
@@ -7,6 +8,7 @@ exceptiongroup==1.1.1
 Flask==2.3.2
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-SocketIO==5.3.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
@@ -21,6 +23,8 @@ pluggy==1.0.0
 pydantic==1.10.7
 pytest==7.3.1
 python-dotenv==1.0.0
+python-engineio==4.4.1
+python-socketio==5.8.0
 SQLAlchemy==2.0.13
 tomli==2.0.1
 typing_extensions==4.5.0
