--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dnspython==2.3.0
 email-validator==2.0.0.post2
 exceptiongroup==1.1.1
 Flask==2.3.2
+Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
 Flask-SocketIO==5.3.4
@@ -25,6 +26,7 @@ pytest==7.3.1
 python-dotenv==1.0.0
 python-engineio==4.4.1
 python-socketio==5.8.0
+six==1.16.0
 SQLAlchemy==2.0.13
 tomli==2.0.1
 typing_extensions==4.5.0
