--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 alembic==1.10.4
 bidict==0.22.1
 blinker==1.6.2
+cachelib==0.10.2
 click==8.1.3
 dnspython==2.3.0
 email-validator==2.0.0.post2
+eventlet==0.33.3
 exceptiongroup==1.1.1
 Flask==2.3.2
+Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==4.0.4
+Flask-Session==0.5.0
 Flask-SocketIO==5.3.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
@@ -18,15 +22,21 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
+numpy==1.24.3
 packaging==23.1
+pandas==2.0.1
 pluggy==1.0.0
 pydantic==1.10.7
 pytest==7.3.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-engineio==4.4.1
 python-socketio==5.8.0
+pytz==2023.3
+six==1.16.0
 SQLAlchemy==2.0.13
 tomli==2.0.1
 typing_extensions==4.5.0
+tzdata==2023.3
 Werkzeug==2.3.3
 WTForms==3.0.1
