--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alembic==1.10.4
+async-generator==1.10
+attrs==23.1.0
 bidict==0.22.1
 blinker==1.6.2
 cachelib==0.10.2
+certifi==2023.5.7
+charset-normalizer==3.1.0
 click==8.1.3
 dnspython==2.3.0
 email-validator==2.0.0.post2
@@ -16,6 +20,7 @@ Flask-SocketIO==5.3.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 greenlet==2.0.2
+h11==0.14.0
 idna==3.4
 iniconfig==2.0.0
 itsdangerous==2.1.2
@@ -23,20 +28,32 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 numpy==1.24.3
+outcome==1.2.0
 packaging==23.1
 pandas==2.0.1
 pluggy==1.0.0
 pydantic==1.10.7
+PySocks==1.7.1
 pytest==7.3.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-engineio==4.4.1
 python-socketio==5.8.0
 pytz==2023.3
+requests==2.30.0
+selenium==4.9.1
 six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.13
 tomli==2.0.1
+tqdm==4.65.0
+trio==0.22.0
+trio-websocket==0.10.2
 typing_extensions==4.5.0
 tzdata==2023.3
+urllib3==2.0.2
+webdriver-manager==3.8.6
 Werkzeug==2.3.3
+wsproto==1.2.0
 WTForms==3.0.1
